--- a/Website/frontend/package.json
+++ b/Website/frontend/package.json
@@ -12,7 +12,10 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-scrollable-list": "^1.3.1",
     "reactstrap": "^8.9.0",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "^7.17.9"
   }
 }
